<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StartActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/start_picture"
        android:scaleType="centerCrop"
        android:src="@drawable/start_background" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:backgroundTint="#77000000"
        android:padding="20dp"
        android:text="@string/start_play"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="35sp"
        android:textColor="@color/start_button"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/guideline4"
        android:id="@+id/button_start"
        android:onClick="onclickStart"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline4"
        android:backgroundTint="#77000000"
        android:padding="10dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textStyle="bold"
        android:textColor="@color/start_button"
        android:text="@string/high_score"
        android:layout_marginLeft="120dp"
        android:layout_marginRight="120dp"
        android:id="@+id/button_score"
        android:onClick="onclickScore"
        />

    <TextView
        android:id="@+id/game_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/guideline4"
        android:text="@string/planet_shooter"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:textStyle="bold"
        android:textSize="60sp"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textAlignment="center"
        android:textColor="@color/start_title"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/developers"
        android:textSize="10sp"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColor="#FFFFFF"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.8" />


</androidx.constraintlayout.widget.ConstraintLayout>